--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ x-init-ollama: &init-ollama
 
 services:
   postgres:
-    image: postgres:16-alpine
+    image: postgres
     hostname: postgres
     networks: ['demo']
     restart: unless-stopped
