--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,7 @@ x-n8n: &service-n8n
     - N8N_PERSONALIZATION_ENABLED=false
     - N8N_ENCRYPTION_KEY
     - N8N_USER_MANAGEMENT_JWT_SECRET
-    #- OLLAMA_HOST=ollama:11434 # Run Ollama on CPU or GPU
-    - OLLAMA_HOST=host.docker.internal:11434 # Run Ollama locally
+    - OLLAMA_HOST=ollama:11434 # OLLAMA_HOST=host.docker.internal:11434 for local Ollamy users
 
 x-ollama: &service-ollama
   image: ollama/ollama:latest
