--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ x-init-ollama: &init-ollama
 services:
   postgres:
     image: postgres
+    platform: linux/amd64
     hostname: postgres
     networks: ['demo']
     restart: unless-stopped
